feat: Add theme toggle functionality and support for auto theme detection

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -24,6 +24,11 @@
                         <option value="emulatorType">System Type</option>
                     </select>
                 </div>
+                <div class="theme-controls">
+                    <button id="theme-toggle" class="btn btn-secondary theme-toggle" title="Toggle theme">
+                        <span id="theme-icon" class="theme-icon">🌙</span>
+                    </button>
+                </div>
                 <button id="add-emulator-btn" class="btn btn-primary">
                     <span class="btn-icon">+</span>
                     Add Emulator
