feat: Implement automatic update download and improve splash screen messages

--- a/renderer/splash.html
+++ b/renderer/splash.html
@@ -74,8 +74,8 @@
                     <div class="install-spinner">
                         <div class="install-icon">⚙️</div>
                     </div>
-                    <p class="loading-text">Installing update...</p>
-                    <p class="loading-subtext">This will only take a moment</p>
+                    <p class="loading-text">Applying update...</p>
+                    <p class="loading-subtext">Restarting in a moment</p>
                 </div>
 
                 <!-- Ready to Launch -->
